--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+      - name: Setup GIT token
+        uses: fregante/setup-git-token@v1
       - name: npm install, deploy
         run: |
           npm ci
