--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # Depends on repo write scope token in secrets (GH_TOKEN)
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js 12.x
@@ -18,11 +19,11 @@ jobs:
       - name: Setup GIT token
         uses: fregante/setup-git-token@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
       - name: npm install, deploy
         run: |
           npm ci
           npm run deploy
         env:
           CI: true
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
